@@ -317,6 +317,7 @@ void NmapOps::Initialize() {
   spoof_mac_set = false;
   mass_dns = true;
   log_errors = false;
+  deprecated_xml_osclass = false;
   resolve_all = 0;
   dns_servers = NULL;
   numhosts_scanned = 0;
